Fix shorturl not showing placeholder

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,7 +15,8 @@ body {
 }
 
 .row {
-    padding: 0.6rem;
+    padding: 0.5rem;
+    margin: 1rem;
 }
 
 .card {
